Fixed OtterMC:transformer impl
Added OtterMC:transformer implementation, moving away from the old transformation code, has not been tested yet.